--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ branches:
     - master
 notifications:
   email:
-    - github@razorsedge.org
+    - gadavis@ucsd.edu
 env:
   - PUPPET_VERSION=2.6.4
   - PUPPET_VERSION=2.6.9
